fix(works): :bug: fix issue with horizontal scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,7 @@
   align-items: center;
   height: 100vh;
   position: relative;
+  width: 100vw;
 }
 
 .sidebar {
